# open_world

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/states/: .part-00000-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00001-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00002-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00003-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00004-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00005-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00006-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00007-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00008-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00009-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00010-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00011-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  .part-00012-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet.crc  part-00000-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00001-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00002-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00003-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00004-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00005-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00006-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00007-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00008-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00009-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00010-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00011-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet  part-00012-34427463-1661-4e5d-8b6a-0ff527c3695b-c000.snappy.parquet
src/open_world/: __init__.py
src/open_world/data/: __init__.py  loader.py  schema.py
src/open_world/graph/: __init__.py  builder.py  edge_types.py  metrics.py  neighbours.py  validation.py
src/open_world/layout/: __init__.py  clustered.py  hexgrid.py  placeholder.py
src/open_world/viz/: __init__.py  api.py  export.py
src/open_world/viz/static/: index.html
tests/: conftest.py
tests/data/: test_loader.py
tests/graph/: test_builder.py  test_metrics.py  test_neighbours.py  test_validation.py
tests/layout/: test_clustered.py  test_hexgrid.py  test_placeholder.py
tests/viz/: test_api.py  test_export.py
