[project]
name = "open-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Suveges", email = "daniel.suveges@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "loguru>=0.7.3",
    "networkx>=3.6.1",
    "polars>=1.42.1",
    "scipy>=1.18.0",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
open-world = "open_world:main"
open-world-viz = "open_world.viz.api:serve"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
addopts = "--cov=open_world --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/open_world"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PD",     # pandas-vet
    "PL",     # pylint
    "RUF",    # ruff-specific rules
    "D",      # pydocstyle (Google convention, see below)
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit
    "PERF",   # perflint
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "ANN401", # dynamically typed Any is fine at graph/dataframe boundaries
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert is expected in tests
    "D",        # tests don't need docstrings
    "ANN",      # tests don't need full annotations
    "PLR2004",  # magic values are fine in test assertions
    "PLR0913",  # parametrized tests legitimately take many arguments
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
